# Nautilus

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TEST_SCENARIOS.md  __version__.py  app.py  install.bat  install.sh  nautilus-completion.bash  nautilus_cli.py  nautilus_config.example.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  ui.py  uninstall.sh
core/: __init__.py  database.py  player.py  scraper.py
models/: __init__.py  media.py
utils/: __init__.py  config.py  paths.py  theme.py  validation.py
