[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus-stream"
version = "1.0.0"
description = "A Japanese minimalist media streaming engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Othman Ordaski", email = "othmanordaski@example.com"}
]
keywords = ["streaming", "media", "mpv", "movies", "tv-shows", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.11.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/othmanordaski/Nautilus"
Repository = "https://github.com/othmanordaski/Nautilus"
Issues = "https://github.com/othmanordaski/Nautilus/issues"

[project.scripts]
nautilus = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "models*", "utils*"]

[tool.setuptools]
py-modules = ["app", "ui", "nautilus_cli", "__version__"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
