[metadata]
name = nautilus-stream
description = A Japanese minimalist media streaming engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/othmanordaski/Nautilus
author = Othman Ordaski
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Multimedia :: Video

[options]
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    nautilus = app:main

[bdist_wheel]
universal = 0
